# rhex_ros2_sim

./: .gitignore  test.py
src/giga_hw_interface/: CMakeLists.txt  giga_hardware_plugins.xml  package.xml
src/giga_hw_interface/launch/: giga.launch.py
src/giga_hw_interface/src/: giga_hardware_interface.cpp
src/launch/: display.launch.py
src/rhex_control/: CMakeLists.txt  package.xml
src/rhex_control/config/: rhex_controllers.yaml
src/rhex_control/launch/: controller.launch.py
src/rhex_control/scripts/: cmd_vel_publisher.py  rhex_gait.py
src/rhex_description/: CMakeLists.txt  package.xml
src/rhex_description/meshes/: Chassis.stl  left_leg.stl  right_leg.stl  stereo_camera.stl  thermal_camera.stl
src/rhex_description/urdf/: joints_interfaces.xacro  macros.xacro  materials.xacro  rhex.control.xacro  rhex.gazebo  rhex.trans  rhex.urdf.xacro  rhex.xacro
src/rhex_gazebo/: CMakeLists.txt  package.xml
src/rhex_gazebo/launch/: gazebo.launch.py
