<?xml version="1.0"?>
<package format="3">
  <name>giga_hw_interface</name>
  <version>0.1.0</version>
  <description>ROS 2 hardware interface plugin for Giga-based robot using ros2_control.</description>

  <maintainer email="adrian.pailler@icloud.com">riyaadh</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <!-- Testing tools -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/giga_hardware_plugins.xml"/>
  </export>
</package>
